# alert-url

./: Makefile  README.md  pyproject.toml
alerturl/: __main__.py  dotenv.py  systemd.py  telegram.py
static/: index.html
