[project]
name = "alert-url"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Marshalkin",email = "marnikitta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "typer (>=0.15.1,<0.16.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
flake8 = "^7.1.1"
black = "^25.1.0"
types-requests = "^2.32.0.20241016"

